2009-01-19  Deepak Bhole  <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Add "Java" in the plugin description string. 
	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Change the way the
	image was searched locally.
	* plugin/icedtea/sun/applet/PluginMain.java: Install a custom SSL trust
	manager.
	* rt/net/sourceforge/jnlp/runtime/JNLPClassLoader.java: Cache file names
	from jars.
	* rt/net/sourceforge/jnlp/security/AccessWarningPane.java: Accept
	CertVerifier as an additional argument.
	* rt/net/sourceforge/jnlp/security/AppletWarningPane.java: Same.
	* rt/net/sourceforge/jnlp/security/CertWarningPane.java: Same.
	* rt/net/sourceforge/jnlp/security/CertsInfoPane.java: Same.
	* rt/net/sourceforge/jnlp/security/HttpsCertVerifier.java: New file.
	Implements information gathering functions used by various prompt dialogs.
	* rt/net/sourceforge/jnlp/security/MoreInfoPane.java: Accept CertVerifier 
	as an additional argument.
	* rt/net/sourceforge/jnlp/security/SecurityDialogUI.java: Same.
	* rt/net/sourceforge/jnlp/security/SecurityWarningDialog.java: Use the new
	common CertVerifier interface to gather information.
	* rt/net/sourceforge/jnlp/security/SingleCertInfoPane.java: Accept
	CertVerifier as an additional argument.
	* rt/net/sourceforge/jnlp/security/VariableX509TrustManager.java:
	Customized trustmanager that can temporarily trust certificates on the
	fly.
	* rt/net/sourceforge/jnlp/security/viewer/CertificatePane.java: Accept
	CertVerifier as an additional argument.
	* rt/net/sourceforge/jnlp/tools/CertVerifier.java: New common interface
	that all security related dialogs now query for certificate info (jar and
	https).
	* rt/net/sourceforge/jnlp/tools/JarSigner.java: Implement the new
	CertVerifier verifier interface.

2009-01-17  Mark Wielaard  <mark@klomp.org>

	* patches/icedtea-version.patch (samejvmsafe): Removed the following
	directories that contain test that are not samevm safe.
	javax/crypto/Cipher (TestGetInstance)