@@ -27,5 +27,5 @@
 #include "incls/_stubRoutines_zero.cpp.incl"
 
 #ifdef IA32
-address StubRoutines::i486::_call_stub_compiled_return = NULL;
+address StubRoutines::x86::_call_stub_compiled_return = NULL;
 #endif // IA32
